# qbittorrent-web-api

./: Cargo.toml  LICENSE  README.md  bors.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  qbittorrent-web-api.code-workspace  setup.sh
.github/: verify_version.sh
.github/workflows/: ci.yml  extra.yml  publish.yml  release.yml  tag.yml
api-gen/: Cargo.toml
api-gen/src/: api-4_1.md  group.rs  lib.rs
api-gen/tests/: add_torrent.rs  another_struct_name.rs  default_parameters.rs  login.rs  logout.rs  return_type.rs  return_type_enum.rs  return_type_with_optional_params.rs  tests.rs  without_parameters.rs
md-parser/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  object_types.rs  util.rs
parser/src/group_parser/: description.rs  mod.rs  parameters.rs  return_type.rs  url_parser.rs
qbittorrent-web-api-gen/: Cargo.toml  README.md  api-4_1.md  groups.txt  token_tree.txt
qbittorrent-web-api-gen/src/: group.rs  lib.rs  types.rs
qbittorrent-web-api-gen/src/generate/: api_group.rs  api_method.rs  group.rs  group_method.rs  mod.rs  skeleton.rs  util.rs
qbittorrent-web-api-gen/src/generate/group/: mod.rs
qbittorrent-web-api-gen/src/generate/group/method/: method_builder.rs  method_with_params.rs  method_without_params.rs  mod.rs  return_type.rs  send_method_builder.rs
qbittorrent-web-api-gen/src/md_parser/: md_token.rs  mod.rs  token_tree.rs  token_tree_factory.rs
qbittorrent-web-api-gen/src/md_parser/token_tree_factory_tests/: complex.check  complex.md  log.check  log.md  multi_table.check  multi_table.md  non_table_with_pipe.check  non_table_with_pipe.md  should_remove_surrounding_asterisk.check  should_remove_surrounding_asterisk.md  should_remove_surrounding_asterix.check  should_remove_surrounding_hash.check  should_remove_surrounding_hash.md  single_level.check  single_level.md
qbittorrent-web-api-gen/src/parser/: api_group.rs  api_method.rs  description.rs  mod.rs  object_types.rs  return_type.rs  types.rs  util.rs
qbittorrent-web-api-gen/src/parser/group/: description.rs  mod.rs  url.rs
qbittorrent-web-api-gen/src/parser/group/method/: description.rs  mod.rs  parameters.rs  return_type.rs  url.rs
qbittorrent-web-api-gen/src/parser/group/method/method_tests/: array_field.check  array_field.md  array_field.tree  array_result.check  array_result.md  array_result.tree  enum.check  enum.md  enum.tree  ref_type.check  ref_type.md  ref_type.tree  search_result.check  search_result.md  search_result.tree
qbittorrent-web-api-gen/src/parser/group_parser/: description.rs  mod.rs  parameters.rs  return_type.rs  url_parser.rs
qbittorrent-web-api-gen/tests/: access_impl_types.rs  access_search.rs  add_torrent.rs  another_struct_name.rs  default_parameters.rs  login.rs  logout.rs  return_type.rs  return_type_enum.rs  return_type_with_optional_params.rs  search_types.rs  tests.rs  without_parameters.rs
qbittorrent-web-api-gen/tests/common/: mod.rs
src/: lib.rs
