[package]
name = "qbittorrent-web-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "qbittorrent_web_api"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
tokio = { version = "1.19.2", features = ["full"] }
qbittorrent-web-api-gen = { path = "./qbittorrent-web-api-gen", version = "0.1.0" }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"

[workspace]
members = [
  "qbittorrent-web-api-gen",
]
