[package]
name = "qbittorrent-web-api"
version = "0.4.2"
edition = "2021"
license = "MIT"
keywords = ["qbittorrent", "torrent", "torrent-client"]
repository = "https://github.com/JoelWachsler/qbittorrent-web-api"
description = "Generated web api for qBittorrent"

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
tokio = { version = "1.19.2", features = ["full"] }
qbittorrent-web-api-gen = { path = "./qbittorrent-web-api-gen", version = "0.4.2" }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"

[workspace]
members = ["qbittorrent-web-api-gen"]
