[package]
name = "api-gen"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
parser = { path = "../parser" }
syn = { version = "1.0.98", features = ["extra-traits"]}
quote = "1.0.20"
proc-macro2 = "1.0.40"
case = "1.0.0"
thiserror = "1.0.31"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
regex = "1.6.0"

[dev-dependencies]
trybuild = { version = "1.0.63", features = ["diff"] }
anyhow = "1.0.58"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
